Wed Oct 20 15:07:16 1999  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfileinfo.cpp,h: implemented KFileInfo::filePath() and fixed 
	KFileInfo::absURL() not being set in some cases
	
	* kdir.cpp: fixed a buglet in the path (double slashes)

	* kfiledetaillist.cpp (KFileDetailList): improved selecting files
	(single click, double click, Return-key)
	but the mapping from QListViewItem to KFileInfo is still quite broken
	
1999-06-09  Woohyun JANG <louis@mizi.co.kr>

	* kdir.cpp: used QString::local8Bit() instead of QString::ascii() 
	for file names and directory names.

	* kfiledialog.cpp: used QStringList instead of QStrIList. 

1999-01-14  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: fixed some GUI problems and moved all default
	configurations into config-kfile.h. 
	Changed some default values, so that users that never looked into
	the config dialog gets a nice suprise with 1.1 ;-)

	* kfiledialog.cpp: changed selectedFile to return decoded path instead
	of encoded one

Thu Jan  7 23:14:39 1999  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfilesimpleview.cpp (keyPressEvent): fixed segfault on keypress,
	when there were no files at all in the list

1998-12-19  Stephan Kulow  <coolo@kde.org>

	* kfiledialog.cpp: fixing an ugly bug when "." is used as argument

Mon Dec 14 23:00:41 1998  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfilebookmark.cpp: renamed class KBookmark to KFileBookmark to 
	avoid problems with KFM's KBookmark class. Renamed bookmark.* to
	kfilebookmark.*, too and changed all occurrences of bookmark.* to
	kfilebookmark.* (especially all the .po-files)

Wed Dec  2 15:59:13 1998  Carsten Pfeiffer  <pfeiffer@kde.org>

	* kfilesimpleview.cpp: Fixed some more keyboard navigation bugs.
	Added method isColCompletelyVisible( int col ), now you can scroll
	perfectly to make items completely visible.
	Moreover, in resizeEvent() the number of columns was not calculated 
	correctly in a special case.